documented responses in Swagger
